# GSSDH

./: .gitignore  CMakeLists.txt  README.md  graph.in  requirements.txt
.github/workflows/: c-cpp.yml  experiment.yml
benchmark/: benchmark-graph-edit-distance.py  benchmark-graph-similarity-search.py  utility.py
benchmark/reference/: GED-AIDS-AStar-LSa.csv
data/GraphSimilaritySearch/: AIDS.100query  example.data  example.query
data/GraphSimilaritySearch/aids100/: 11712.txt  123384.txt  12764.txt  128735.txt  136475.txt  143437.txt  161624.txt  165146.txt  16881.txt  224131.txt  265474.txt  27320.txt  303601.txt  310106.txt  325621.txt  33624.txt  357689.txt  359277.txt  364363.txt  38534.txt  46716.txt  55276.txt  55796.txt  56757.txt  602617.txt  614936.txt  623715.txt  623976.txt  624379.txt  626853.txt  627691.txt  628443.txt  629414.txt  629813.txt  631167.txt  632841.txt  633512.txt  633629.txt  634285.txt  637336.txt  (+60 more)
driver/: graph-edit-distance.cc  graph-similarity-search.cc
lib/Base/: Base.h  BasicAlgorithms.h  DynamicHungarian.h  Hungarian.h  Logger.h  Metrics.h  PrettyPrint.h  Timer.h
lib/DataStructure/: Graph.h  LabeledGraph.h  LabeledGraphDatabase.h
lib/GraphSimilarity/: Branch.h  DifferenceVector.h  EditDistance.h  GSSEntry.h  GraphIsomorphism.h  GraphSimilaritySearch.h  PartitionFilter.h  StableColoring.h  State.h  WeisfeilerLehman.h
lib/GraphSimilarity/GraphColoring/: GWL.h
lib/GraphSimilarity/GraphEditDistance/: AStarBMa.h  AStarDH.h  AStarDHo.h  AStarDHo1.h  AStarLSa.h  AStarMixed.h  DFSDH.h  OurGED.h
