cmake_minimum_required(VERSION 3.21)
project(GraphSimilaritySearch)

if(APPLE)
    message(STATUS "Configuring for macOS")
    set(CMAKE_C_COMPILER /opt/homebrew/bin/gcc-13)
    set(CMAKE_CXX_COMPILER /opt/homebrew/bin/g++-13)
    set(CMAKE_CXX_STANDARD 23)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++23 -Ofast -Wno-psabi")
else()
    message(STATUS "Configuring for Linux")
    set(CMAKE_C_COMPILER /usr/bin/gcc)
    set(CMAKE_CXX_COMPILER /usr/bin/g++)
    message(STATUS "C Compiler: ${CMAKE_C_COMPILER}")
    message(STATUS "C++ Compiler: ${CMAKE_CXX_COMPILER}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++23 -Ofast -Wno-psabi -DCOLORING")
    # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++23 -Ofast -Wno-psabi -fsanitize=address -g")
endif()

FIND_PACKAGE(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(lib)

#add_executable(GraphEditDistance driver/graph-edit-distance.cc)
add_executable(GraphSimilaritySearch driver/graph-similarity-search.cc)